--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^9.5.2",
+    "react-scroll-parallax": "^3.4.2",
     "sass": "^1.64.2",
     "tailwindcss": "3.3.3"
   }
