--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
     "autoprefixer": "10.4.14",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.5.2",
+    "react-leaflet": "^4.2.1",
     "react-scroll-parallax": "^3.4.2",
     "sass": "^1.64.2",
     "tailwindcss": "3.3.3"
